--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -16,7 +17,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "sync-request": "^6.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
