--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.2",
+    "jade": "^1.11.0",
     "jwt-simple": "^0.5.6",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
